package co.edu.uniandes.proyecto1.domain.model.tiquete;

public class TiqueteBasico extends Tiquete {
    public TiqueteBasico(String id, String localidadId, boolean transferible) {
        super(id, localidadId, transferible);
    }
}


