classDiagram
direction LR
%% 1. Usuarios y Roles
class Usuario {
<>
+ login : String
+ password : String
}
class ClienteComprador {
+ saldoVirtual : Double = 0.0
}
class Organizador
class Administrador {
+ porcentajeCargoServicio : Double
+ cobroFijoEmision : Double
}
Usuario <|-- ClienteComprador : Herencia
Usuario <|-- Administrador : Herencia
ClienteComprador <|-- Organizador : Herencia
%% 2. Eventos y Locaciones
class Venue {
+ nombre : String
+ ubicacion : String
+ capacidadMaxima : Integer
+ aprobado : Boolean
}
class Evento {
+ nombre : String
+ fecha : Date
+ tipoEvento : String
}
class Localidad {
+ nombre : String
+ precioBase : Double
+ esNumerada : Boolean
}
class Oferta {
+ descuentoPorcentual : Double
+ ventanaTiempoInicio : Date
+ ventanaTiempoFin : Date
}
Administrador "1..*" -- "0..*" Venue : aprueba/gestiona
Organizador "1" -- "*" Evento : crea/organiza [1]
Evento "0..*" -- "1" Venue : se realiza_en [1]
Evento "1" -- "*" Localidad : tiene [2]
Localidad "1" -- "*" Oferta : aplica [3]
%% 3. Tiquetes (Jerarquía)
class Tiquete {
<>
+ identificadorUnico : String [4]
+ precio : Double
+ cargoServicio : Double [4]
+ cuotaEmision : Double [4]
+ transferible : Boolean
+ vendido : Boolean
}
class TiqueteBasico
class TiqueteNumerado {
+ numeroAsiento : String [5]
}
class TiqueteAgrupacion {
<>
+ precioAgrupacion : Double [5]
+ restriccionTopeX : Integer [5]
}
class TiqueteMultiple
class PaqueteDeluxe {
+ descripcionBeneficios : String [5]
+ incluyeMercancia : Boolean
}
Tiquete <|-- TiqueteBasico : Herencia
TiqueteBasico <|-- TiqueteNumerado : Herencia
TiqueteBasico <|-- TiqueteAgrupacion : Herencia
TiqueteAgrupacion <|-- TiqueteMultiple : Herencia
TiqueteAgrupacion <|-- PaqueteDeluxe : Herencia
%% 4. Relaciones de Venta y Composición
Localidad "1" -- "*" Tiquete : se asocia_a [2]
ClienteComprador "0..*" -- "*" Tiquete : compra/posee [4]
TiqueteMultiple "1" *-- "1..*" Tiquete : incluye_componente [5]
PaqueteDeluxe "1" *-- "1..*" Tiquete : incluye_componente [5]